# noordpool

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ROADMAP.md  fly.toml  justfile  wait.sh
.claude/skills/: format.md  pr.md  run.md  test.md
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Cargo.toml  build.rs  database.db
backend/src/: app_state.rs  config.rs  error.rs  json.rs  lib.rs  main.rs  r2.rs  routes.rs
backend/src/auth/: claims.rs  google.rs  handlers.rs  mod.rs  password.rs
backend/src/events/: handlers.rs  mod.rs
backend/src/games/: handlers.rs  live.rs  live_ws.rs  mod.rs
backend/src/import/: mod.rs
backend/src/lineup/: handlers.rs  mod.rs
backend/src/matches/: handlers.rs  mod.rs
backend/src/models/: event_type.rs  formation.rs  game.rs  game_event.rs  game_lineup.rs  game_lineup_slot.rs  game_status.rs  home_away.rs  match_event.rs  match_status.rs  mod.rs  player.rs  position.rs  push_subscription.rs  team.rs  user.rs  user_role.rs
backend/src/players/: handlers.rs  mod.rs
backend/src/push/: mod.rs
backend/src/stats/: handlers.rs  mod.rs
backend/src/teams/: handlers.rs  mod.rs
backend/src/users/: avatar.rs  handlers.rs  mod.rs
backend/tests/: auth.rs  events.rs  games.rs  live_mode.rs  matches.rs  players.rs  push_subscriptions.rs  stats.rs  teams.rs  users.rs
backend/tests/common/: mod.rs
backend/tests/snapshots/: events__create_event.snap  events__create_event.snap.new  games__create_game.snap  games__get_game.snap  games__get_game.snap.new  games__update_game.snap  matches__create_game.snap  matches__get_game.snap  matches__update_game.snap  matches__update_match.snap  players__create_player.snap  players__get_player.snap  players__player_stats_empty.snap  players__player_stats_empty.snap.new  players__update_player.snap  stats__player_stats_with_events.snap
data/: planning-2025.csv  planning-2026.csv  stats_per_speler.xlsx  voetbal.csv
design/: lineup.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: app.css  app.html  noordpool-theme.css  service-worker.ts  test-setup.ts
frontend/src/lib/: live-match.svelte.ts  push-subscribe.test.ts  push-subscribe.ts  visibility-polling.svelte.ts  visibility-polling.test.ts
frontend/src/lib/api/: auth.ts  client.ts  events.ts  games.ts  lineup.ts  matches.ts  players.ts  push.ts  teams.ts  types.ts  users.ts
frontend/src/lib/components/: GoogleOAuthButton.svelte  Header.svelte  Header.test.ts  PitchView.svelte  PlayerAvatar.svelte  PlayerBadge.svelte  Spinner.svelte
frontend/src/lib/components/charts/: PlayerStatsBar.svelte  PlayerTimeline.svelte
frontend/src/lib/lineup/: formations.ts
frontend/src/lib/state/: auth.svelte.ts  pwa.svelte.ts  theme.svelte.ts  toaster.ts
frontend/src/lib/utils/: date.test.ts  date.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/admin/users/: +page.svelte  users.test.ts
frontend/src/routes/auth/link-player/: +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte  register.test.ts
frontend/src/routes/games/: +page.svelte  games.test.ts
frontend/src/routes/games/[id]/: +page.svelte  game-detail.test.ts
frontend/src/routes/games/new/: +page.svelte  new.test.ts
frontend/src/routes/matches/: +page.svelte
frontend/src/routes/matches/[id]/: +page.svelte
frontend/src/routes/matches/new/: +page.svelte
frontend/src/routes/players/: +page.svelte  players.test.ts
frontend/src/routes/players/[id]/: +page.svelte  (+1 more)
frontend/src/routes/profile/: +page.svelte  profile.test.ts
frontend/src/routes/stats/: +page.svelte
(+12 files in other folders)
