[package]
name = "noordpool-backend"
version = "0.1.0"
edition = "2024"

[features]
prod = ["dep:lambda_http"]

[dependencies]
dotenvy = "0.15.7"
axum = { version = "0.8.8", features = ["tokio"] }
tokio = { version = "1.50", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
toasty = { path = "/home/joey/dev/toasty/crates/toasty", features = ["postgresql", "jiff", "sqlite", "serde"] }
# toasty = { git = "https://github.com/tokio-rs/toasty.git", features = ["postgresql", "jiff", "sqlite", "serde"] }
axum-security = { git = "https://github.com/joeydewaal/axum-security/", features = ["jwt", "rbac", "macros", "jiff", "oidc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1"

lambda_http = { version = "1.1.2", optional = true }

[build-dependencies]
csv = "1"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
