[package]
name = "noordpool-backend"
version = "0.1.0"
edition = "2024"

[features]
prod = []

[dependencies]
dotenvy = "0.15.7"
axum = { version = "0.8.8", features = ["tokio", "ws", "multipart"] }
tokio = { version = "1.50", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
toasty = { git = "https://github.com/tokio-rs/toasty.git", features = ["jiff", "sqlite", "serde"] }
axum-security = { git = "https://github.com/joeydewaal/axum-security/", features = ["jwt", "rbac", "macros", "jiff", "oidc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1"
web-push = { version = "0.11", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

[build-dependencies]
csv = "1"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
